# Open-Music

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  HIERARCHICAL_SYSTEM.md  LICENSE  README.md  TROUBLESHOOTING.md  cookies_fix.md  docker-compose.yml  docker-start.sh  test_lavalink.sh
config/: config
docs/: AUDIO_PIPELINE.md  AUDIO_QUALITY.md  COOKIES.md
lavalink-config/: application.yml
migrations/: 001_initial.sql
scripts/: diagnose_audio.sh  extract_cookies.py  setup_youtube_api.sh  setup_youtube_cookies.sh  simple_test.sh  test_hierarchical_system.sh  test_ssap_recovery.sh  test_youtube_fix.sh  update_cookies.sh
src/: config.rs  lib.rs  main.rs  storage.rs
src/audio/: audio_manager.rs  effects.rs  equalizer.rs  hybrid_manager.rs  lavalink_client.rs  lavalink_simple.rs  mod.rs  player.rs  queue.rs  robust_queue.rs
src/bot/: commands.rs  events.rs  fast_commands.rs  handlers.rs  hybrid_commands.rs  lavalink_commands.rs  lavalink_simple_commands.rs  mod.rs  search.rs
src/cache/: lru_cache.rs  mod.rs  optimized_cache.rs
src/monitoring/: mod.rs  tests.rs
src/sources/: direct_url.rs  invidious.rs  mod.rs  search_optimizer.rs  smart_source.rs  soundcloud.rs  spotify.rs  tidal.rs  youtube.rs  youtube_api_v3.rs  youtube_enhanced.rs  youtube_fast.rs  youtube_rss.rs  ytdlp_optimized.rs
src/ui/: buttons.rs  embeds.rs  mod.rs
tests/: config_tests.rs  storage_tests.rs
