[package]
name = "open-music"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "High-performance Discord music bot"
license = "MIT"
rust-version = "1.85"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Framework Discord - Versiones estables para audio
serenity = { version = "0.12.4", features = ["voice", "gateway", "rustls_backend", "http", "cache", "collector"] }
songbird = { version = "0.5.0", features = ["builtin-queue", "serenity", "driver", "gateway", "rustls"] }

# Procesamiento de audio - Versiones actualizadas
symphonia = { version = "0.5.4", features = ["mp3", "aac", "flac", "wav", "ogg", "isomp4"] }
audiopus = "0.3.0-rc.0"  # Versión estable disponible
fundsp = { version = "0.20", default-features = false }
rubato = "0.15.0"
tempfile = "3.20.0"
# Songbird NO requiere FFmpeg - usa Symphonia internamente

# Async runtime - Versiones optimizadas
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7.15"
async-trait = "0.1.88"
futures = "0.3"

# Utilidades - Versiones estables
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.0"
dotenvy = "0.15"  # Reemplazo moderno de dotenv

# HTTP y APIs - Versiones actualizadas (Compatible con Songbird)
reqwest = { version = "0.12.20", features = ["json", "rustls-tls", "stream"], default-features = false }
url = "2.5.4"
base64 = "0.22.1"

# Base de datos eliminada - Usando JSON simple

# Caché y estructuras de datos - Versiones estables
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# UI y formato - Versiones estables
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.2"
num-format = "0.4"

# Integración con yt-dlp - Versiones mejoradas
async-process = "2.3.1"
regex = "1.11.1"
urlencoding = "2.1.3"
# Dependencias adicionales para mejor audio
bytes = "1.10.1"
flume = "0.11.1"

# Adicionales básicos
rand = "0.8.5"
num_cpus = "1.17"
fastrand = "2.2"

[dev-dependencies]
pretty_assertions = "1.4"
mockall = "0.13"

[[bin]]
name = "open-music"
path = "src/main.rs"