[package]
name = "open-music"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "High-performance Discord music bot"
license = "MIT"
rust-version = "1.82"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Framework Discord - Versiones estables para audio
serenity = { version = "0.12.5", features = ["voice", "gateway", "rustls_backend", "http", "cache", "collector"] }
songbird = { version = "0.6.0", features = ["builtin-queue", "serenity", "driver", "gateway", "rustls"] }

# Procesamiento de audio - Versiones actualizadas
symphonia = { version = "0.5.5", features = ["mp3", "aac", "flac", "wav", "ogg", "isomp4"] }

# Async runtime - Versiones optimizadas
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7.13"
async-trait = "0.1.88"
futures = "0.3"

# Utilidades - Versiones estables
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.95"
thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.137"
config = "0.15"
dotenvy = "0.15"

# HTTP y APIs - Versiones actualizadas
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"], default-features = false }
url = "2.5"
base64 = "0.22"
urlencoding = "2.1"

# Caché y estructuras de datos
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# UI y formato
chrono = { version = "0.4.39", features = ["serde"] }
humantime = "2.2"
num-format = "0.4"

# Integración con yt-dlp
async-process = "2.3"
regex = "1.11"
bytes = "1.10"
flume = "0.11"

# Adicionales básicos
rand = "0.8"
num_cpus = "1.17"
fastrand = "2.3"

[dev-dependencies]
pretty_assertions = "1.4"
mockall = "0.13"

[lib]
name = "open_music"
path = "src/lib.rs"

[[bin]]
name = "open-music"
path = "src/main.rs"